Fix carbon ads light mode text contrast

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -59,6 +59,7 @@
 
 [data-md-color-scheme="default"] .carbon-text {
   color: var(--md-code-fg-color) !important;
+  --carbon-text-color: #313131 !important;
 }
 
 .md-typeset__table {
